
syntax = "proto3";
package pb;

option go_package = "central/proto/pb";
service PythonUtil {
  rpc ParseNewsArticle(ParseNewsArticleRequest) returns (ParseNewsArticleResponse);
  rpc GenerateEmbeddings(GenerateEmbeddingsRequest) returns (GenerateEmbeddingsResponse);
  rpc GenerateKeywords(GenerateKeywordsRequest) returns (GenerateKeywordsResponse);
  rpc StreamHistorical(StreamHistoricalRequest) returns (stream StreamHistoricalResponse);
}
message ParseNewsArticleRequest {
  string url = 1;
}
message ParseNewsArticleResponse {
  string provider = 1;
  string metadata = 2;
  string headline = 3;
  string content = 4;
}
message GenerateEmbeddingsRequest {
  string content = 1;
}
message GenerateEmbeddingsResponse {
  repeated float embeddings = 1;
}
message GenerateKeywordsRequest {
  string content = 1;
}

message GenerateKeywordsResponse {
  repeated string keywords = 1;
}

message StreamHistoricalRequest{
    string startdate = 1;
    string enddate = 2;
    repeated string tickers = 3;
}
message StreamHistoricalResponse{
    string timestamp = 1;
    repeated StockData stocks= 2;
}
message StockData{
    string ticker = 1;
    float open = 2;
    float close = 3;
    float low = 4;
    float high = 5;
    float volume = 6;
}
